tests/ui/require_static_not_static.stderr
error: lifetime may not live long enough
  --> $DIR/require_static_not_static.rs:13:5
   |
12 | fn assert_my_struct_collect<'a>() {
   |                             -- lifetime `'a` defined here
13 |     MyStruct::<'a>::needs_trace();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`
